--- a/ukr.html
+++ b/ukr.html
@@ -96,7 +96,7 @@
                 <div class="col-md-7 col-sm-12 col-xs-12">
                     <div class="text">
                         <h1>Panda School вітає Вас!</h1>
-                        <p>В Panda School ми прагнемо створити унікальний освітній простір, де вчитися не лише
+                        <p>В Panda School ми прагнемо створити унікальний освітній простір, де вчтись не лише
                             ефективно, а й захопливо. Наші уроки ґрунтуються на передових педагогічних методиках,
                             включаючи використання штучного інтелекту та інших сучасних технологій. Ми віримо, що
                             вивчення англійської мови — це не просто уроки, а захоплива пригода.
@@ -124,25 +124,25 @@
                     </div>
                     <div class="col-md-6  col-sm-6 col-xs-12">
                         <div class="single-about">
-                            <p class="bolt">Мене звуть Анастасія, і я викладач англійської мови з досвідом роботи в
+                            <p class="bolt">Мене звати Анастасія, я викладач англійської мови з досвідом роботи в
                                 різних школах, університетах, онлайн-школах та волонтерства в Німеччині, Нідерландах та
-                                Індії. Все своє життя я мріяла бути вчителем, я дуже люблю свою роботу і насолоджуюся її
+                                Індії. Все життя я мріяла бути вчителем, дуже люблю свою роботу і насолоджуюся її
                                 розвитком.</p>
                             <p>Окрім диплома педагогічного університету, моя освіта включає диплом Роттердамського
-                                університету Єразмуса з основ бізнесу, дипломи Google з ІТ та цифрового маркетингу, що
-                                підтверджує мої мовні навички. Мої програми навчання відповідають останнім тенденціям і
-                                дозволяють вчити англійську через улюблені ігри дітей. Чи не чудово, коли навчання
+                                університету Єразмуса з основ бізнесу, дипломи Google з ІТ та Digital Marketing & E-Commerce, що
+                                підтверджує мої мовні навички. Програми навчання, які я використовую, відповідають останнім світовим тенденціям і
+                                дозволяють вивчати англійську через улюблені ігри дітей. Чи не чудово, коли навчання
                                 відбувається у формі гри? Це не лише захоплююче, а й ефективно для засвоєння матеріалу.
 
                                 Раніше я викладала в школах, але переконалася, що деякі шкільні методики не завжди
                                 відповідають потребам сучасних дітей. Більшість директорів шкіл - це такі дорослі, які,
-                                ніби застрягли в минулому, і не хочуть йти в ногу з часом та слідувати за сучасними
+                                ніби застрягли в минулому, і не хочуть йти в ногу з часом, щось змінювати та слідувати за сучасними
                                 тенденціями. Я впевнена, що уроки англійської можуть бути захоплюючими та більш
-                                ефективними, якщо втілити в них ігрові елементи, які діти так люблять.
+                                ефективними, якщо втілити в них ігрові елементи, які так люблять діти.
 
                             </p>
-                            <p class="bolt">Я готова запропонувати вашому дитині захопливі уроки, повні ігор і
-                                навчальних моментів. Давайте створимо атмосферу, в якій ваш малятко буде із задоволенням
+                            <p class="bolt">Я залюбки запропоную ващій дитині захопливі уроки, повні ігор і
+                                навчальних моментів. Давайте створимо атмосферу, в якій учні будуть із задоволенням
                                 вивчати англійську!</p>
 
                             <div class="social">
@@ -198,8 +198,8 @@
                             <div class="single-service">
                                 <i class="fa fa-mobile"></i>
                                 <h5>Групові уроки</h5>
-                                <p>Організація онлайн-уроків у формі групових занять, де діти спілкуються між собою та з
-                                    викладачем англійською мовою</p>
+                                <p>Організація онлайн-уроків у формі групових занять, де діти спілкуються англійською мовою між собою та з
+                        викладачем</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="0.8s"
