--- a/ukr.html
+++ b/ukr.html
@@ -352,7 +352,7 @@
                                 <h3>Міжнародна школа Амбані, м. Мумбаї, Індія</h3>
                                 <p>Вчитель англійської мови для молодших класів, волонтер</p>
                                 <p class="p2">
-                                    Під час навчання на третьому курсі університету, під час літніх канікул, я взяла
+                                    На третьому курсі університету, під час літніх канікул, я взяла
                                     участь у волонтерській програмі, спрямованій на викладання англійської мови для
                                     учнів початкових класів. Моя участь полягала в викладанні англійської мови в
                                     загальноосвітній школі в місті Мумбаї, Індія, де я займалася викладацькою діяльністю
@@ -371,7 +371,7 @@
                                     онлайн-форматі збагатила мої педагогічні навички і підтвердила важливість
                                     індивідуального підходу до кожного учня.
 
-                                    Моя педагогічна практика в онлайн-школі Gems дозволила мені поглибити розуміння
+                                    Педагогічна практика в цій онлайн-школі дозволила мені поглибити розуміння
                                     ефективних методів навчання англійської мови через дистанційні технології. Важливим
                                     було не лише надавати знання, але й створювати максимально комфортне і стимулююче
                                     навчальне середовище для кожного студента.</p>
@@ -388,7 +388,7 @@
                                     була спрямована на навчання англійської мови мігрантів, надаючи їм навички для
                                     успішної адаптації в новому середовищі.
 
-                                    Методи навчання ґрунтувалися на широкому спектрі педагогічних підходів. Я активно
+                                    Методика викладання ґрунтувалася на широкому спектрі педагогічних підходів. Я активно
                                     застосовувала інноваційні методики, включаючи інтерактивні уроки, використання
                                     сучасних освітніх технологій та індивідуалізацію для кожного учня. Це допомогло
                                     створити атмосферу, сприяючу ефективному та цікавому засвоєнню знань.
@@ -404,7 +404,7 @@
                             <span class="year wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">2022</span>
                             <div class="inner-content wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">
                                 <h3>Роттердамський університет Єразма, Нідерланди</h3>
-                                <p>Студент</p>
+                                <p>Студентка</p>
                                 <p class="p2">З жовтня 2022 року по березень 2023 року я проходила навчання на курсах
                                     "Основи бізнесу" в Роттердамському університеті Єразма. Цей період став важливим
                                     етапом у моєму професійному розвитку як вчителя англійської мови.
@@ -421,7 +421,7 @@
                             <span class="year wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="1s">2023</span>
                             <div class="inner-content wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1s">
                                 <h3>Google</h3>
-                                <p>Студент, практикант</p>
+                                <p>Студентка, практикантка</p>
                                 <p class="p2">
                                     У вересні 2023 року я успішно завершила піврічні курси від Google, які охоплювали
                                     дві різні галузі: ІТ та цифровий маркетинг, включаючи електронну комерцію, і
@@ -605,7 +605,7 @@
                                 </div>
                                 <span class="name">Joop Huij, PhD, Професор фінансів в Роттердамській школі управління,
                                     університет
-                                    Еразмус</span>
+                                    Еразма</span>
                             </div>
                             <!--End single-testimonial -->
                             <!--Start single-testimonial -->
@@ -613,8 +613,8 @@
                                 <img src="img/author2.jpg" alt="#">
                                 <p><i class="fa fa-quote-left"></i><i>Я був викладачем маркетингу у Анастасії на
                                         курсі Основи бізнесу в 2022/23 роках. Анастасія виділялась в класі навіть серед
-                                        видатної групи. Вона залишила враження своєю вдачею, особистістю та
-                                        здатностями. Вона дуже зацікавлена, відповідальна та розумна. Вона активно
+                                        видатної групи. Вона залишила враження своєю особистістю та
+                                        здатностями. Анастасія дуже зацікавлена, відповідальна та розумна. Вона активно
                                         брала участь на лекціях, старанно працювала над домашніми завданнями, шукала
                                         можливості для саморозвитку і, безперечно, відігравала ключову роль у
                                         керівництві
