--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                             English language courses for children, feel free to contact us. We are ready to answer all
                             your inquiries and provide you with all the necessary information.
                         </p>
-                        <p>ВYou can contact us via phone on WhatsApp, Telegram, Viber, send an email, or fill out the
+                        <p>You can contact us via phone on WhatsApp, Telegram, Viber, send an email, or fill out the
                             contact form right here on the website. We appreciate your interest and are ready to assist
                             you on the journey of language learning for your child.
                         </p>
