--- a/ukr.html
+++ b/ukr.html
@@ -680,7 +680,7 @@
                             допомогти вам в подорожі до мовного навчання вашої дитини.
                         </p>
                         <span><i class="fa fa-phone-square"></i>+380 (73) 077 29 83</span>
-                        <span><i class="fa fa-map-marker"></i>Лондон, Англія</span>
+                        <span><i class="fa fa-map-marker"></i>Лондон, Велика Британія</span>
                         <span><i class="fa fa-envelope"></i><a href="#">pandaschoolinfo@gmail.com</a></span>
                         <span><i class="fa fa-globe"></i><a href="#">www.thepandaschool.com</a></span>
                     </div>
