--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                             you on the journey of language learning for your child.
                         </p>
                         <span><i class="fa fa-phone-square"></i>+380 (73) 077 29 83</span>
-                        <span><i class="fa fa-map-marker"></i>London, England</span>
+                        <span><i class="fa fa-map-marker"></i>London, United Kingdom</span>
                         <span><i class="fa fa-envelope"></i><a href="#">pandaschoolinfo@gmail.com</a></span>
                         <span><i class="fa fa-globe"></i><a href="#">www.thepandaschool.com</a></span>
                     </div>
