--- a/ru.html
+++ b/ru.html
@@ -683,7 +683,7 @@
 							Мы ценим ваш интерес и готовы помочь вам в путешествии к языковому обучению вашего ребенка.
 						</p>
 						<span><i class="fa fa-phone-square"></i>+380 (73) 077 29 83</span>
-						<span><i class="fa fa-map-marker"></i>Лондон, Англия</span>
+						<span><i class="fa fa-map-marker"></i>Лондон, Великобритания</span>
 						<span><i class="fa fa-envelope"></i><a href="#">pandaschoolinfo@gmail.com</a></span>
 						<span><i class="fa fa-globe"></i><a href="#">www.thepandaschool.com</a></span>
 					</div>
