--- a/ru.html
+++ b/ru.html
@@ -63,11 +63,10 @@
 							<div class="collapse navbar-collapse">
 								<ul id="nav" class="nav navbar-nav">
 									<li class="dropdown language-dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Мова/Language/Sprache/Язык
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Language/Sprache/Язык
 										</a>
 										<ul class="dropdown-menu dropdown">
 											<li><a href="index.html">English</a></li>
-											<li><a href="ukr.html">Українська</a></li>
 											<li><a href="de.html">Deutsch</a></li>
 											<li><a href="ru.html">Русский</a></li>
 										</ul>
