--- a/de.html
+++ b/de.html
@@ -64,11 +64,10 @@
                                 <ul id="nav" class="nav navbar-nav">
                                     <li class="dropdown language-dropdown">
                                         <a href="#" class="dropdown-toggle"
-                                            data-toggle="dropdown">Мова/Language/Sprache/Язык
+                                            data-toggle="dropdown">Language/Sprache/Язык
                                         </a>
                                         <ul class="dropdown-menu dropdown">
                                             <li><a href="index.html">Englisch</a></li>
-                                            <li><a href="ukr.html">Українська</a></li>
                                             <li><a href="de.html">Deutsch</a></li>
                                             <li><a href="ru.html">Russisch</a></li>
                                         </ul>
