--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <p>At Panda School, we strive to create a unique educational space where learning is not only
                             effective but also enjoyable. Our lessons are based on advanced pedagogical methodologies,
                             including the use of artificial intelligence and other modern technologies. We believe that
-                            learning the English language is not just about lessons; it's an exciting adventure.
+                            learning the English language is not just about lessons, it's an exciting adventure.
                         </p>
                         <div class="button">
                             <a href="#story" class="btn primary "><i class="fa fa-briefcase"></i>My works</a>
