--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Social -->
     <div class="social-body">
         <ul>
-            <li class="instagram"><a href="https://www.instagram.com/panda_school_english/"><i
+            <li class="instagram"><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr/"><i
                         class="fa fa-instagram"></i></a></li>
 
             <li class="facebook"><a href="https://www.facebook.com/profile.php?id=61556214085225"><i
