--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li class="instagram"><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr/"><i
                         class="fa fa-instagram"></i></a></li>
 
-            <li class="facebook"><a href="https://www.facebook.com/profile.php?id=61556214085225"><i
+            <li class="facebook"><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><i
                         class="fa fa-facebook"></i></a></li>
             <li class="twitter"><a href="https://twitter.com/thepandaschool/"><i class="fa fa-twitter"></i></a></li>
 
