--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <li class="facebook"><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><i
                         class="fa fa-facebook"></i></a></li>
-            <li class="twitter"><a href="https://twitter.com/thepandaschool/"><i class="fa fa-twitter"></i></a></li>
+            <li class="twitter"><a href="https://www.youtube.com/@pandaschooleng"><i class="fa fa-twitter"></i></a></li>
 
             <li class="pinterest"><a href="https://pin.it/2ruRlaFSQ"><i class="fa fa-pinterest"></i></a></li>
         </ul>
