--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
                             <div class="social">
                                 <ul>
-                                    <li><a href="https://www.instagram.com/panda_school_english/"><i
+                                    <li><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr"><i
                                                 class="fa fa-instagram"></i></a></li>
-                                    <li><a href="https://www.facebook.com/profile.php?id=61556214085225"><i
+                                    <li><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><i
                                                 class="fa fa-facebook-f"></i></a></li>
-                                    <li><a href="https://twitter.com/thepandaschool/"><i class="fa fa-twitter"></i></a>
+                                    <li><a href="https://www.youtube.com/@pandaschooleng"><i class="fa fa-twitter"></i></a>
                                     </li>
                                     <li><a href="https://pin.it/2ruRlaFSQ"><i class="fa fa-pinterest-p"></i></a></li>
                                 </ul>
