--- a/index.html
+++ b/index.html
@@ -752,11 +752,11 @@
                         </div>
                         <!-- Social -->
                         <ul class="social">
-                            <li><a href="https://www.instagram.com/panda_school_english/"><span
+                            <li><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr"><span
                                         class="fa fa-instagram"></span></a></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=61556214085225"><span
+                            <li><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><span
                                         class="fa fa-facebook"></span></a></li>
-                            <li><a href="https://twitter.com/thepandaschool/"><span class="fa fa-twitter"></span></a>
+                            <li><a href="https://www.youtube.com/@pandaschooleng"><span class="fa fa-twitter"></span></a>
                             </li>
                             <li><a href="https://pin.it/2ruRlaFSQ"><span class="fa fa-pinterest-p"></span></a></li>
                         </ul>
