--- a/ru.html
+++ b/ru.html
@@ -30,12 +30,12 @@
 	<!-- Social -->
 	<div class="social-body">
 		<ul>
-			<li class="instagram"><a href="https://www.instagram.com/panda_school_english/"><i
+			<li class="instagram"><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr"><i
 						class="fa fa-instagram"></i></a></li>
 
-			<li class="facebook"><a href="https://www.facebook.com/profile.php?id=61556214085225"><i
+			<li class="facebook"><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><i
 						class="fa fa-facebook"></i></a></li>
-			<li class="twitter"><a href="https://twitter.com/thepandaschool/"><i class="fa fa-twitter"></i></a></li>
+			<li class="twitter"><a href="https://www.youtube.com/@pandaschooleng"><i class="fa fa-twitter"></i></a></li>
 
 			<li class="pinterest"><a href="https://pin.it/2ruRlaFSQ"><i class="fa fa-pinterest"></i></a></li>
 		</ul>
@@ -153,11 +153,11 @@
 
 							<div class="social">
 								<ul>
-									<li><a href="https://www.instagram.com/panda_school_english/"><i
+									<li><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr"><i
 												class="fa fa-instagram"></i></a></li>
-									<li><a href="https://www.facebook.com/profile.php?id=61556214085225"><i
+									<li><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><i
 												class="fa fa-facebook-f"></i></a></li>
-									<li><a href="https://twitter.com/thepandaschool/"><i class="fa fa-twitter"></i></a>
+									<li><a href="https://www.youtube.com/@pandaschooleng"><i class="fa fa-twitter"></i></a>
 									</li>
 									<li><a href="https://pin.it/2ruRlaFSQ"><i class="fa fa-pinterest-p"></i></a></li>
 								</ul>
@@ -756,11 +756,11 @@
 						</div>
 						<!-- Social -->
 						<ul class="social">
-							<li><a href="https://www.instagram.com/panda_school_english/"><span
+							<li><a href="https://www.instagram.com/panda_school_engl?igsh=b3A5MWp0MW15N3c0&utm_source=qr"><span
 										class="fa fa-instagram"></span></a></li>
-							<li><a href="https://www.facebook.com/profile.php?id=61556214085225"><span
+							<li><a href="https://www.tiktok.com/@panda_school_eng?is_from_webapp=1&sender_device=pc"><span
 										class="fa fa-facebook"></span></a></li>
-							<li><a href="https://twitter.com/thepandaschool/"><span class="fa fa-twitter"></span></a>
+							<li><a href="https://www.youtube.com/@pandaschooleng"><span class="fa fa-twitter"></span></a>
 							</li>
 							<li><a href="https://pin.it/2ruRlaFSQ"><span class="fa fa-pinterest-p"></span></a></li>
 						</ul>
